syntax = "proto3";

package auth;

option go_package = "github.com/Makovey/internal/gen/auth";

service Auth {
  rpc RegisterUser(User) returns (AuthResponse);
  rpc LoginUser(LoginRequest) returns (AuthResponse);
}

message User {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}